# Near-Staking-Dapp-SmartContract

./: .gitignore  README.md  readme.txt
src/: Cargo.toml
src/ft_contract/: Cargo.toml
src/ft_contract/src/: lib.rs
src/ft_staking_contract/: Cargo.toml
src/ft_staking_contract/src/: ft_calls.rs  internal.rs  lib.rs
src/neardev/: dev-account  dev-account.env
src/shell_scripts/: build.sh  claim_reward.sh  deposit_storage.sh  get_apy.sh  stake.sh  unstake.sh
src/tests/sim/: main.rs  tests.rs  utils.rs
webapp/: package-lock.json  package.json
webapp/src/: App.css  App.js
webapp/src/components/: APYComponent.js  APYTableHead.js  APYTablebody.js  AccountBalance.js  Header.js  StakeForm.js  StakingComponent.js  StakingDuration.js  StakingHistory.js  TableBody.js  TableHead.js
webapp/src/provider/: NearProvider.js
