[package]
name = "src"
version = "0.1.0"
authors = ["Near Inc <hello@near.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
near-sdk = "4.0.0-pre.6"
near-sdk-sim = "4.0.0-pre.6"


ft = {path= "./ft_contract"}
ft_staking = {path= "./ft_staking_contract"}



[workspace]
# remember to include a member for each contract
members = [
 
  "ft_contract",
  "ft_staking_contract",  
]

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort" 
overflow-checks = true