[package]
name = "ft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = {version = "4.0.0-pre.6", features = ["unstable"]}
near-contract-standards = "4.0.0-pre.6"

